# configpp

./: CMakeLists.txt
example/: CMakeLists.txt  config_example1.conf  config_example1.cpp
include/variti/util/: config.hpp
src/util/: config.cpp
